# mctools

./: .gitignore  README.md  example.ipynb  pyproject.toml
example/: example.ipynb
mctools/basic/: __init__.py  analysis.py  basis.py  molecule.py
mctools/ci/: analysis.py  common.py  states.py  transitions.py
mctools/cli/: cli.py  console.py  main.py  parse.py  parser.py
mctools/core/: __init__.py  base.py  basis.py  constants.py  mcpeaks.py  mcspace.py  mcspectrum.py  mcstates.py  mctransitions.py  mo.py  molecule.py  resource.py  resources.py  utils.py
mctools/core/cistring/: __init__.py  graphs.py  utils.py
mctools/core/utils/: __init__.py  constants.py  mo.py  state_alignment.py  value_batching.py
mctools/newcore/: __init__.py  analyzer.py  consolidator.py  datum.py  depenency.py  metadata.py  resource.py  storage.py
mctools/parser/: lib.py
mctools/parser/gaussian/: __init__.py  fchk.py  l302.py  l303.py  l910.py  rwfdump.py  utils.py
mctools/parsing/: __init__.py  oldlib.py  utils.py
mctools/parsing/core/: __init__.py  error.py  filehandler.py  parser.py  pattern.py  resources.py  stepper.py  utils.py
mctools/parsing/core/parser/: __init__.py  base.py  dict.py  list.py
mctools/parsing/gaussian/: __init__.py  fchk.py  rwfdump.py  utils.py
mctools/parsing/gaussian/log/: __init__.py  parser.py  route.py  utils.py
mctools/parsing/gaussian/log/links/: __init__.py  base.py  l302.py  l303.py  l308.py  l910.py  oldl910.py  parser.py  stepper.py
mctools/parsing/gaussian/log/route/: __init__.py  parser.py  route.py
mctools/parsing/gaussian/rwfdump/: __init__.py
mctools/plot/: spectrum.py  states.py
mctools/scripts/: tdm_parsing.py
tests/: conftest.py  test_mctools.py  test_parser.py  test_stepper.py
tests/parsing/core/: test_stepper.py
tests/parsing/gaussian/: test_l302.py  test_parser.py
