[tool.poetry]
name = "mctools"
version = "0.1.0"
description = "Toolset to simplify work with Multiconfigurational Calculations"
authors = ["Kirill Shumilov <shumilov.kirill98@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10"
attrs = "23.*"
numpy = ">=1.24.3"
scipy = ">=1.10.1"
pandas = ">=2.0.1"
matplotlib = ">=3.7.1"
sympy = ">=1.12"
coverage = "^7.4.1"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.3.1"
ipython = ">=8.13.2"
jupyter = ">=1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
