[tool.poetry]
name = "mctools"
version = "0.1.0"
description = "Toolset to simplify work with Multiconfigurational Calculations"
authors = ["Kirill Shumilov <shumilov.kirill98@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
attrs = ">23"
numpy = ">=1.24.3"
scipy = ">=1.10.1"
pandas = ">=2.0.1"
matplotlib = ">=3.7.1"
sympy = ">=1.12"
tqdm = "^4.66.2"
h5py = "^3.10.0"
click = "^8.1.7"
rich-click = "^1.7.3"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.3.1"
ipython = ">=8.13.2"
jupyterlab = ">=1.0.0"
coverage = "^7.4.1"
pytest-datadir = "^1.5.0"
mypy = "^1.8.0"
icecream = "^2.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mctools = 'mctools.cli.cli:cli'
